# libcoring

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  covent-config.cmake.in
examples/: CMakeLists.txt  sleep.cc
include/: covent.hh
include/covent/: base.hh  concepts.hh  event_loop.hh  evloops.hh  evloops.hh.in  evloops_EVLOOP.hh.in  exceptions.hh  task.hh  taskgrp.hh
include/covent/evloops/: EVLOOP.hh.in  evloops.hh.in
src/: base.cc  event_loop.cc  exceptions.cc  impl.hh
src/uring/: awaiters.cc  awaiters.hh  event_awaiters.cc  event_awaiters.hh  event_loop.cc  event_loop.hh  evloop.cc  evloop.hh  network.cc
